--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "ts-node": "^10.9.1",
     "typeorm": "^0.3.7",
     "typescript": "^4.7.4",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
