feat: added search function and refatorated code

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,2 @@
-DATABASE_URL=postgresql://USUÁRIO:SENHA@localhost:5432/BANCO
+DB_URI_DEV=postgres://postgres:password@pg:5432/BANCO
 POSTGRES_PASSWORD=
-
-ADMIN_EMAIL=
-ADMIN_PASSWORD=
-
-PORT=3000
-
-SECRET_KEY=
-EXPIRES_IN=1h
