--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
+version: '3'
 services:
   api:
-    container_name: mblabs
+    container_name: container-mblab-api
     build:
       context: .
       dockerfile: Dockerfile
@@ -14,7 +15,7 @@ services:
       - pg
     command: bash -c 'yarn migration:run && yarn dev'
   pg:
-    container_name: mblabs_database
+    container_name: container-mblab
     image: postgres
     env_file:
       - .env
